--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
           Blow <br> 
           Breath <br> 
         </div>
+        <div class = "animals">
+          Snakes <br> 
+          Cats <br> 
+          Dogs <br> 
+          Cicadas <br> 
+          Ducks <br> 
+        </div>
       </div>
     </div>
     
@@ -98,7 +105,7 @@
     <script>
       // Add event listener to the button
       document.getElementById("startbutton").addEventListener("click", function() {
-        this.textContent = "Now, say a word!";
+        this.textContent = "Now, say a noun!";
         this.classList.add("clicked");
         this.classList.remove("startbutton");
       });
